--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./:/app/
-    command: ["./manage.py", "runserver", "0:8000"]
+    command: ["python","./manage.py", "runserver", "0:8000"]
     environment:
      - DJANGO_DB_HOST=db
     depends_on:
